Service Portion Content Change

--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -131,7 +131,7 @@
                     <!-- IMAGE CAROUSEL START -->
                     <div class="section-content">
                             <div class="row">
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
@@ -149,7 +149,7 @@
                                     
                                 </div>
                                 
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
@@ -167,29 +167,11 @@
                                     
                                 </div>
 
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">3</span>
-                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
-                                            </div>
-                                            <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Cement and Net</h4>
-                                                <p>Build with the best quality cement and make your partitions with the best nest and meshes from Excel Traders.</p>
-                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
-                                            </div>
-                                        </div>
-                                    </div>                            	
-                                    
-                                </div>
-
-                                <div class="col-md-3 col-sm-6">
-                                    
-                                    <div class="mt-icon-box-wraper m-b30">
-                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
-                                            <span class="icon-count-number">4</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
@@ -201,7 +183,66 @@
                                         </div>
                                     </div>                            	
                                     
-                                </div>										
+                                </div>	
+                                
+                                
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                                    
+                                    <div class="mt-icon-box-wraper m-b30">
+                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
+                                            <span class="icon-count-number">4</span>
+                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                            </div>
+                                            <div class="icon-content">
+                                                <h4 class="mt-tilte m-b25">Net</h4>
+                                                <p>Make your partitions with the best nest and meshes from Excel Traders for excellent construction.
+
+                                                </p>
+                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
+                                            </div>
+                                        </div>
+                                    </div>                            	
+                                    
+                                </div>
+
+
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                                    
+                                    <div class="mt-icon-box-wraper m-b30">
+                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
+                                            <span class="icon-count-number">5</span>
+                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                            </div>
+                                            <div class="icon-content">
+                                                <h4 class="mt-tilte m-b25">Cement</h4>
+                                                <p>Build with the best quality cement from leading brands for outstanding build strength.</p>
+                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
+                                            </div>
+                                        </div>
+                                    </div>                            	
+                                    
+                                </div>
+
+
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                                    
+                                    <div class="mt-icon-box-wraper m-b30">
+                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
+                                            <span class="icon-count-number">6</span>
+                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                            </div>
+                                            <div class="icon-content">
+                                                <h4 class="mt-tilte m-b25">Paint</h4>
+                                                <p>Paint your desired colours for your favourite constructions to make a mesmerizing outlook.</p>
+                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
+                                            </div>
+                                        </div>
+                                    </div>                            	
+                                    
+                                </div>
                                                                                          
                             </div>
                     </div>
@@ -347,7 +388,7 @@
                             	<div class="mt-box our-story-detail bg-moving bg-cover" style="background-image:url({% static 'web/images/background/line.png' %})">
                                    <!-- <h4 class="text-uppercase m-b20">2013-14</h4> -->
                                     <h4 class="m-b20">Best reasonable price</h4>
-                                    <p>Excel Traders is one of Kerala's most considerable and most prominent vendors of TMT bars, cement, steel pipes, sheets, and nets. We provide the whole solution for all your needs for building materials at the best reasonable price.</p>
+                                    <p>Excel Traders is one of Kerala's most considerable and most prominent vendors of TMT bars, cement, steel pipes, sheets, paints and nets. We provide the whole solution for all your needs for building materials at the best reasonable price.</p>
                                 </div>
                             </div>                            
                         </div>
