--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -837,7 +837,7 @@
                                 <div class="col-md-3 col-sm-12">
                                 	<div class="about-home-right bg-white p-a30"> 
                                     	<h3 class="m-t0"><span class="font-weight-100">Delivering </span>Best-Grade Products For You.</h3>
-                                        <p><strong>Excel Traders is one of the finest dealers of TMT bars, cement, steel pipes, sheets, nets, and building materials in Kerala.</strong></p>
+                                        <p><strong>Excel Traders is one of the finest dealers of TMT bars, cement, steel pipes, sheets, nets,paints and building materials in Kerala.</strong></p>
                                         <p>We work on a vision to deliver superior quality products for customers all over Kerala at the best reasonable price.  </p>
                                         <div class="text-right">
                                             <a href="{% url 'web:about' %}" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a>
@@ -953,7 +953,14 @@
                                             <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="59" aria-valuemin="0" aria-valuemax="100">
                                                 <span  class="popOver" data-toggle="tooltips" data-placement="top" title="59%"></span>
                                             </div>
-                                        </div>                                        
+                                        </div>    
+                                        
+                                        <span class="progressText text-black"><B>Paint</B></span>
+                                        <div class="progress mt-probar-1 m-b30 m-t10">
+                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100">
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="62%"></span>
+                                            </div>
+                                        </div>   
                                 
                                     </div>  	                                	
                                 </div>
@@ -1102,24 +1109,24 @@
                                     </div>                            	
                                     
                                 </div>
-
                                 <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">3</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Cement  </h4>
-                                                <p>Build with the best quality cement from leading brands for outstanding build strength.</p>
+                                                <h4 class="mt-tilte m-b25">Building Materials</h4>
+                                                <p>Excel Traders delivers the complete solution for all your needs for building materials at the best reasonable price.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
                                     </div>                            	
                                     
                                 </div>
+                               
                                 <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
@@ -1144,17 +1151,17 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">5</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Paint</h4>
-                                                <p>Paint your desired colours for your favourite constructions to make a mesmerizing outlook.</p>
+                                                <h4 class="mt-tilte m-b25">Cement  </h4>
+                                                <p>Build with the best quality cement from leading brands for outstanding build strength.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
                                     </div>                            	
                                     
-                                </div>	
+                                </div>
                                 <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
@@ -1164,8 +1171,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Net & paint</h4>
-                                                <p>Build with the highest quality nets and paint from Excel Traders.</p>
+                                                <h4 class="mt-tilte m-b25">Paint</h4>
+                                                <p>Paint your desired colours for your favourite constructions to make a mesmerizing outlook.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
