--- a/templates/web/products.html
+++ b/templates/web/products.html
@@ -144,8 +144,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/services/Net.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
-                                        <h4>Net</h4>
-                                        <p>Build with the highest quality nets and meshes from Excel Traders.
+                                        <h4>Net & paint</h4>
+                                        <p>Build with the highest quality nets and paint from Excel Traders.
                                         </p>
                                          <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
