--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1133,7 +1133,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">4</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/mesh-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Net  </h4>
@@ -1151,7 +1151,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">5</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/cement-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Cement  </h4>
