--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -192,7 +192,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">4</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/mesh-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Net</h4>
@@ -213,7 +213,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">5</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/cement-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Cement</h4>
@@ -232,7 +232,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">6</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/paint-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Paint</h4>
