--- a/templates/web/products.html
+++ b/templates/web/products.html
@@ -142,7 +142,7 @@
                             <div class="col-md-4 col-sm-12 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/Net.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Net&paint.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
                                         <h4>Net & paint</h4>
                                         <p>Build with the highest quality nets and paint from Excel Traders.
