--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1168,7 +1168,7 @@
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
                                             <span class="icon-count-number">6</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
-                                                <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/paint-01.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Paint</h4>
